// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`explorer-grid render default 1`] = `

<div>
  <div class="grid grow grid-cols-7 gap-4 bg-secondary px-8 dark:bg-black">
    <div class="col-span-2">
    </div>
    <div class="col-span-3">
      <div class="text-md flex flex-row items-center pt-6 font-medium">
        <svg
          xmlns="http://www.w3.org/2000/svg"
          width="22"
          height="22"
          viewbox="0 0 24 24"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          class="lucide lucide-search mr-3"
        >
          <circle
            cx="11"
            cy="11"
            r="8"
          >
          </circle>
          <path d="m21 21-4.3-4.3">
          </path>
        </svg>
        No Results
      </div>
      <div class="flex flex-col gap-6">
      </div>
    </div>
    <div class="col-span-2">
    </div>
  </div>
</div>

`;

exports[`explorer-grid renders workspace with edges in 1`] = `

<div>
  <div class="grid grow grid-cols-7 gap-4 bg-secondary px-8 dark:bg-black">
    <div class="col-span-2">
      <div class="text-md flex flex-row items-center pt-6 font-medium">
        <svg
          xmlns="http://www.w3.org/2000/svg"
          width="22"
          height="22"
          viewbox="0 0 24 24"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          class="lucide lucide-gallery-thumbnails mr-3"
        >
          <rect
            width="18"
            height="14"
            x="3"
            y="3"
            rx="2"
          >
          </rect>
          <path d="M4 21h1">
          </path>
          <path d="M9 21h1">
          </path>
          <path d="M14 21h1">
          </path>
          <path d="M19 21h1">
          </path>
        </svg>
        Parent
      </div>
      <div class="group relative z-10">
        <div
          class="block rounded-lg border bg-card text-card-foreground shadow-sm relative my-4 transition-all border-foreground cursor-pointer group-hover:border-neutral-400 dark:group-hover:border-neutral-600"
          role="article"
        >
          <div class="relative flex w-full flex-col rounded-t-lg p-0">
            <div class="flex items-center px-3 py-2">
              <h3 class="tracking-tight flex-1 items-center text-sm font-medium">
                a
              </h3>
              <div class="flex-initial rounded-full border-[1px] border-solid px-2 py-1">
                <p class="text-xs">
                  1.0.0
                </p>
              </div>
            </div>
            <div class="flex flex-row flex-wrap items-center justify-between gap-2 border-t-[1px] border-muted-foreground/20 px-3 py-2">
              <p class="text-sm text-muted-foreground/50">
                b@workspace:*
              </p>
              <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 grow-0 border-transparent bg-cyan-100 text-neutral-900 hover:bg-cyan-100/80">
                prod
              </div>
            </div>
          </div>
        </div>
        <div class="absolute -right-4 top-7 w-4 border-t border-solid border-muted-foreground">
        </div>
      </div>
    </div>
    <div class="col-span-3">
      <div class="text-md flex flex-row items-center pt-6 font-medium">
        <svg
          xmlns="http://www.w3.org/2000/svg"
          width="22"
          height="22"
          viewbox="0 0 24 24"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          class="lucide lucide-gallery-vertical mr-3"
        >
          <path d="M3 2h18">
          </path>
          <rect
            width="18"
            height="12"
            x="3"
            y="6"
            rx="2"
          >
          </rect>
          <path d="M3 22h18">
          </path>
        </svg>
        Selected Item
      </div>
      <div class="flex flex-col gap-6">
        <div class="relative">
          <div class="block rounded-lg border bg-card text-card-foreground shadow-sm relative my-4 border-muted-foreground">
            <div class="p-6 relative -m-px flex flex-row rounded-t-lg bg-primary px-4 py-3 text-white dark:border dark:border-solid dark:border-muted-foreground dark:text-black rounded-b-lg">
              <h3 class="text-2xl font-semibold leading-none tracking-tight flex w-full items-center justify-between">
                <div class="flex items-center justify-between">
                  <span class="text-sm font-medium">
                    b
                  </span>
                  <span class="mx-2">
                    ·
                  </span>
                  <span class="text-sm font-light text-muted-foreground">
                    v1.0.0
                  </span>
                </div>
              </h3>
            </div>
            <div class="p-4">
            </div>
            <div class="w-full px-4 pb-4">
              <div
                dir="ltr"
                data-orientation="horizontal"
              >
                <div
                  role="tablist"
                  aria-orientation="horizontal"
                  class="h-10 items-center justify-center rounded-md bg-muted p-1 text-muted-foreground grid w-full grid-cols-2"
                  tabindex="0"
                  data-orientation="horizontal"
                  style="outline: none;"
                >
                  <button
                    type="button"
                    role="tab"
                    aria-selected="true"
                    aria-controls="radix-:r8:-content-package.json"
                    data-state="active"
                    id="radix-:r8:-trigger-package.json"
                    class="inline-flex items-center justify-center whitespace-nowrap rounded-sm px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow-sm w-36"
                    tabindex="-1"
                    data-orientation="horizontal"
                    data-radix-collection-item
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="16"
                      height="16"
                      viewbox="0 0 24 24"
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      class="lucide lucide-file-search2 mr-2"
                    >
                      <path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z">
                      </path>
                      <path d="M14 2v4a2 2 0 0 0 2 2h4">
                      </path>
                      <circle
                        cx="11.5"
                        cy="14.5"
                        r="2.5"
                      >
                      </circle>
                      <path d="M13.3 16.3 15 18">
                      </path>
                    </svg>
                    package.json
                  </button>
                </div>
                <div
                  data-state="active"
                  data-orientation="horizontal"
                  role="tabpanel"
                  aria-labelledby="radix-:r8:-trigger-package.json"
                  id="radix-:r8:-content-package.json"
                  tabindex="0"
                  class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
                  style="animation-duration: 0s;"
                >
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div class="col-span-2">
      <div class="text-md flex flex-row items-center pt-6 font-medium">
        <svg
          xmlns="http://www.w3.org/2000/svg"
          width="22"
          height="22"
          viewbox="0 0 24 24"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          class="lucide lucide-git-fork mr-3 rotate-180"
        >
          <circle
            cx="12"
            cy="18"
            r="3"
          >
          </circle>
          <circle
            cx="6"
            cy="6"
            r="3"
          >
          </circle>
          <circle
            cx="18"
            cy="6"
            r="3"
          >
          </circle>
          <path d="M18 9v2c0 .6-.4 1-1 1H7c-.6 0-1-.4-1-1V9">
          </path>
          <path d="M12 12v3">
          </path>
        </svg>
        Dependencies
        <div class="flex grow justify-end">
          <button
            type="button"
            aria-haspopup="dialog"
            aria-expanded="false"
            aria-controls="radix-:ra:"
            data-state="closed"
          >
          </button>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-6 rounded-sm px-1"
            role="button"
            data-state="closed"
          >
            <svg
              xmlns="http://www.w3.org/2000/svg"
              width="24"
              height="24"
              viewbox="0 0 24 24"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              stroke-linecap="round"
              stroke-linejoin="round"
              class="lucide lucide-plus"
            >
              <path d="M5 12h14">
              </path>
              <path d="M12 5v14">
              </path>
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>

`;

exports[`explorer-grid with results 1`] = `

<div>
  <div class="grid grow grid-cols-7 gap-4 bg-secondary px-8 dark:bg-black">
    <div class="col-span-2">
    </div>
    <div class="col-span-3">
      <div class="text-md flex flex-row items-center pt-6 font-medium mb-4">
        Results
      </div>
      <div class="flex flex-col gap-6">
        <div class="group relative z-10">
          <a
            href="#"
            class="block rounded-lg border bg-card text-card-foreground shadow-sm relative group-hover:border-neutral-400 dark:group-hover:border-neutral-600 cursor-pointer"
          >
            <div class="p-6 m-0 flex flex-row items-center justify-between rounded-t-lg border-b-[1px] px-4 py-3">
              <button
                data-state="closed"
                class="truncate"
              >
                <h3 class="font-semibold tracking-tight text-md truncate">
                  a@^1.0.0
                </h3>
              </button>
              <div class="flex items-center justify-center text-pretty rounded-md border-[1px] px-2.5 py-0.5 text-xs text-muted-foreground">
                <p class="font-semibold">
                  <span>
                    prod
                  </span>
                  <span class="px-1 font-medium text-muted-foreground">
                    dep of:
                  </span>
                  <span>
                    file(.):root@1.0.0
                  </span>
                </p>
              </div>
            </div>
            <div class="flex flex-row items-center justify-between px-3 py-2">
              <div class="flex items-center justify-center rounded-sm border-[1px] px-2 py-1">
                <button data-state="closed">
                  <p class="m-0 w-full truncate p-0 align-baseline font-mono text-[0.65rem] font-medium text-muted-foreground">
                    npm:a@1.0.0
                  </p>
                </button>
              </div>
              <div class="flex gap-2 overflow-x-scroll">
              </div>
            </div>
          </a>
        </div>
        <div class="group relative z-10">
          <a
            href="#"
            class="block rounded-lg border bg-card text-card-foreground shadow-sm relative group-hover:border-neutral-400 dark:group-hover:border-neutral-600 cursor-pointer"
          >
            <div class="p-6 m-0 flex flex-row items-center justify-between rounded-t-lg border-b-[1px] px-4 py-3">
              <button
                data-state="closed"
                class="truncate"
              >
                <h3 class="font-semibold tracking-tight text-md truncate">
                  b@^1.0.0
                </h3>
              </button>
              <div class="flex items-center justify-center text-pretty rounded-md border-[1px] px-2.5 py-0.5 text-xs text-muted-foreground">
                <p class="font-semibold">
                  <span>
                    dev
                  </span>
                  <span class="px-1 font-medium text-muted-foreground">
                    dep of:
                  </span>
                  <span>
                    file(.):root@1.0.0
                  </span>
                </p>
              </div>
            </div>
            <div class="flex flex-row items-center justify-between px-3 py-2">
              <div class="flex items-center justify-center rounded-sm border-[1px] px-2 py-1">
                <button data-state="closed">
                  <p class="m-0 w-full truncate p-0 align-baseline font-mono text-[0.65rem] font-medium text-muted-foreground">
                    npm:b@1.0.0
                  </p>
                </button>
              </div>
              <div class="flex gap-2 overflow-x-scroll">
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div class="col-span-2">
    </div>
  </div>
</div>

`;

exports[`explorer-grid with stack 1`] = `

<div>
  <div class="grid grow grid-cols-7 gap-4 bg-secondary px-8 dark:bg-black">
    <div class="col-span-2">
    </div>
    <div class="col-span-3">
      <div class="text-md flex flex-row items-center pt-6 font-medium mb-4">
        Results
      </div>
      <div class="flex flex-col gap-6">
        <div class="group relative z-10">
          <a
            href="#"
            class="block rounded-lg border bg-card text-card-foreground shadow-sm relative group-hover:border-neutral-400 dark:group-hover:border-neutral-600 cursor-pointer"
          >
            <div class="p-6 m-0 flex flex-row items-center justify-between rounded-t-lg border-b-[1px] px-4 py-3">
              <button
                data-state="closed"
                class="truncate"
              >
                <h3 class="font-semibold tracking-tight text-md truncate">
                  a@^1.0.0
                </h3>
              </button>
              <div class="flex items-center justify-center text-pretty rounded-md border-[1px] px-2.5 py-0.5 text-xs text-muted-foreground">
                <p class="font-semibold">
                  <span>
                    prod
                  </span>
                  <span class="px-1 font-medium text-muted-foreground">
                    dep of:
                  </span>
                  <span>
                    file(.):root@1.0.0
                  </span>
                </p>
              </div>
            </div>
            <div class="flex flex-row items-center justify-between px-3 py-2">
              <div class="flex items-center justify-center rounded-sm border-[1px] px-2 py-1">
                <button data-state="closed">
                  <p class="m-0 w-full truncate p-0 align-baseline font-mono text-[0.65rem] font-medium text-muted-foreground">
                    npm:a@1.0.0
                  </p>
                </button>
              </div>
              <div class="flex gap-2 overflow-x-scroll">
              </div>
            </div>
          </a>
        </div>
        <div class="group relative z-10">
          <div class="absolute left-1 top-1 h-full w-[99%] rounded-lg border bg-card transition-all group-hover:border-neutral-400 dark:group-hover:border-neutral-600">
          </div>
          <a
            href="#"
            class="block rounded-lg border bg-card text-card-foreground shadow-sm relative group-hover:border-neutral-400 dark:group-hover:border-neutral-600 cursor-pointer"
          >
            <div class="p-6 m-0 flex flex-row items-center justify-between rounded-t-lg border-b-[1px] px-4 py-3">
              <button
                data-state="closed"
                class="truncate"
              >
                <h3 class="font-semibold tracking-tight text-md truncate">
                  b@^1.0.0
                </h3>
              </button>
              <div class="flex items-center justify-center text-pretty rounded-md border-[1px] px-2.5 py-0.5 text-xs text-muted-foreground">
                <p class="font-semibold">
                  <span class="px-1 font-medium text-muted-foreground">
                    dep of:
                  </span>
                  <span>
                    2 packages
                  </span>
                </p>
              </div>
            </div>
            <div class="flex flex-row items-center justify-between px-3 py-2">
              <div class="flex items-center justify-center rounded-sm border-[1px] px-2 py-1">
                <button data-state="closed">
                  <p class="m-0 w-full truncate p-0 align-baseline font-mono text-[0.65rem] font-medium text-muted-foreground">
                    npm:b@1.0.0
                  </p>
                </button>
              </div>
              <div class="flex gap-2 overflow-x-scroll">
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div class="col-span-2">
    </div>
  </div>
</div>

`;
